Sun Sep  4 22:28:50 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (default_port, default_imap_port,
	  default_tls_port, default_ssl_port, default_imaps_port):
	  added methods for consistency with Net::POP.
	  based on the patch by art lussos.  [ruby-core:38997] [Bug #5198]

Sun Sep  4 21:19:19 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* Change encoding from EUC-JP to UTF-8. [Feature #5128]

Sun Sep  4 00:47:39 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/ruby/test_fiber.rb (TestFiber#test_no_valid_cfp):
	  add a test. Unlike TestThread#test_no_valid_cfp,
	  this test succeeds even if win32ole is required (see r33153).

Sun Sep  4 00:11:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_const_set): show the previous definition
	  location.  [EXPERIMENTAL]

Sat Sep  3 23:56:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (sizeof_struct_dirent_too_small): check if struct
	  dirent.d_name is too small.

	* configure.in (RUBY_MINGW32): take tool prefix from CC.

Sat Sep  3 23:52:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_next_argv): open in default text mode.
	  [ruby-core:39234] [Bug #5268]

Sat Sep  3 18:40:57 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/thread.rb (SizedQueue#max=): raise ArgumentError if max is not
	  positive number. patch by Masaki Matsushita.
	  [ruby-dev:44449] [Bug #5259]

	* test/thread/test_queue.rb (test_sized_queue_initialize,
	  test_sized_queue_assign_max): add tests for it.

Fri Sep  2 21:11:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (validate_enc_binmode, prep_stdio): default to text mode on
	  dosish platforms.  [ruby-core:38822] [Bug #5164]

	* transcode.c (rb_econv_prepare_options): keep default ecflags
	  unchanged if no options.

Fri Sep  2 14:36:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_search_const_defined_class): search
	  ancestors only when global scope.  [ruby-core:39227] [Bug #5264]
